test/errors/test_assignment_in_if_fail.hy
int x = 5

// This should fail - assignment returns void, not boolean
if x = 0 {
    print(999)
}